--- a/Hippo/UIView/TableViewCell/AgentProfileTableViewCell/ChatInfoAgentTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/AgentProfileTableViewCell/ChatInfoAgentTableViewCell.xib
@@ -64,7 +64,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afo-mJ-rPH">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afo-mJ-rPH">
                                 <rect key="frame" x="85" y="57" width="14" height="22"/>
                                 <state key="normal" image="dropdown"/>
                             </button>
