--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -2559,7 +2559,7 @@
             </objects>
             <point key="canvasLocation" x="1865" y="-1962"/>
         </scene>
-        <!--Payment-->
+        <!--Checkout View Controller-->
         <scene sceneID="zjR-sj-HGh">
             <objects>
                 <viewController storyboardIdentifier="CheckoutViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="W7R-NT-0ws" customClass="CheckoutViewController" customModule="Hippo" customModuleProvider="target" sceneMemberID="viewController">
@@ -2570,14 +2570,30 @@
                     <view key="view" contentMode="scaleToFill" id="IYW-1c-HRh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IYY-Wq-cJb" customClass="NavigationBar" customModule="Hippo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44" width="375" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="mPx-Qo-gDk"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="IYY-Wq-cJb" firstAttribute="leading" secondItem="IYW-1c-HRh" secondAttribute="leading" id="JjW-Wx-eqU"/>
+                            <constraint firstAttribute="trailing" secondItem="IYY-Wq-cJb" secondAttribute="trailing" id="RYh-FX-jnP"/>
+                            <constraint firstItem="IYY-Wq-cJb" firstAttribute="top" secondItem="S6N-DR-WDx" secondAttribute="bottom" id="Wmj-fR-HtN"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Payment" id="uxE-j9-bJD"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="navigationBar" destination="IYY-Wq-cJb" id="29u-w7-xhB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oMV-Vt-hGg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="444" y="3260"/>
+            <point key="canvasLocation" x="444" y="3259.5202398800602"/>
         </scene>
         <!--Promotions View Controller-->
         <scene sceneID="dnr-FW-9tw">
