--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -1770,14 +1770,14 @@
                                             <action selector="sendMessageButtonAction:" destination="RAD-lA-huB" eventType="touchUpInside" id="Oss-ab-thG"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send a message..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vkZ-H0-n5j">
-                                        <rect key="frame" x="76" y="3" width="116.5" height="50"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send a message..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vkZ-H0-n5j">
+                                        <rect key="frame" x="68" y="3" width="262" height="50"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                         <color key="textColor" red="0.28627450980000002" green="0.28627450980000002" blue="0.28627450980000002" alpha="0.5" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HWq-nU-95V" customClass="HippoMessageTextView" customModule="Hippo" customModuleProvider="target">
-                                        <rect key="frame" x="70" y="3" width="260" height="50"/>
+                                        <rect key="frame" x="62" y="3" width="268" height="50"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="hRg-4V-hSl"/>
@@ -1789,56 +1789,58 @@
                                             <outlet property="delegate" destination="RAD-lA-huB" id="Gm5-RG-sz2"/>
                                         </connections>
                                     </textView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YXN-8X-YeU">
-                                        <rect key="frame" x="0.0" y="0.0" width="40" height="56"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="40" id="a85-Jx-63h"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="28"/>
-                                        <inset key="titleEdgeInsets" minX="0.0" minY="-3" maxX="0.0" maxY="0.0"/>
-                                        <state key="normal" image="moreOptions">
-                                            <color key="titleColor" red="0.12941176469999999" green="0.58823529409999997" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <state key="highlighted">
-                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="addAttachmentButtonAction:" destination="Zql-KC-mKa" eventType="touchUpInside" id="BAb-gG-0NQ"/>
-                                            <action selector="addAttachmentButtonAction:" destination="RAD-lA-huB" eventType="touchUpInside" id="MAi-Uw-xxv"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SWP-3a-WI8">
-                                        <rect key="frame" x="40" y="0.0" width="30" height="56"/>
-                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="28"/>
-                                        <inset key="titleEdgeInsets" minX="0.0" minY="-3" maxX="0.0" maxY="0.0"/>
-                                        <state key="normal" image="AddFile">
-                                            <color key="titleColor" red="0.12941176469999999" green="0.58823529409999997" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <state key="highlighted">
-                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="addImagesButtonAction:" destination="RAD-lA-huB" eventType="touchUpInside" id="zya-xq-Zgf"/>
-                                        </connections>
-                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="KdF-b1-Sfe">
+                                        <rect key="frame" x="0.0" y="0.0" width="62" height="56"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YXN-8X-YeU">
+                                                <rect key="frame" x="0.0" y="0.0" width="30" height="56"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="30" id="UJj-cF-oGW"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="28"/>
+                                                <inset key="titleEdgeInsets" minX="0.0" minY="-3" maxX="0.0" maxY="0.0"/>
+                                                <state key="normal" image="moreOptions">
+                                                    <color key="titleColor" red="0.12941176469999999" green="0.58823529409999997" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <state key="highlighted">
+                                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="addAttachmentButtonAction:" destination="Zql-KC-mKa" eventType="touchUpInside" id="BAb-gG-0NQ"/>
+                                                    <action selector="addAttachmentButtonAction:" destination="RAD-lA-huB" eventType="touchUpInside" id="MAi-Uw-xxv"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SWP-3a-WI8">
+                                                <rect key="frame" x="32" y="0.0" width="30" height="56"/>
+                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="28"/>
+                                                <inset key="titleEdgeInsets" minX="0.0" minY="-3" maxX="0.0" maxY="0.0"/>
+                                                <state key="normal" image="AddFile">
+                                                    <color key="titleColor" red="0.12941176469999999" green="0.58823529409999997" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                                <state key="highlighted">
+                                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="addImagesButtonAction:" destination="RAD-lA-huB" eventType="touchUpInside" id="zya-xq-Zgf"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.90196078430000004" green="0.90980392160000001" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="vkZ-H0-n5j" firstAttribute="leading" secondItem="SWP-3a-WI8" secondAttribute="trailing" constant="6" id="FPY-Vp-jM6"/>
-                                    <constraint firstItem="SWP-3a-WI8" firstAttribute="top" secondItem="VJr-jD-1Ra" secondAttribute="top" id="Hee-Iv-Yol"/>
+                                    <constraint firstItem="ZPm-UX-dzr" firstAttribute="leading" secondItem="vkZ-H0-n5j" secondAttribute="trailing" id="7nu-Mu-ahv"/>
+                                    <constraint firstItem="vkZ-H0-n5j" firstAttribute="leading" secondItem="KdF-b1-Sfe" secondAttribute="trailing" constant="6" id="Ku5-7K-ZwL"/>
+                                    <constraint firstAttribute="bottom" secondItem="KdF-b1-Sfe" secondAttribute="bottom" id="Lob-Ha-Bnu"/>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="150" id="Mcy-Dh-Fsm"/>
-                                    <constraint firstItem="SWP-3a-WI8" firstAttribute="leading" secondItem="YXN-8X-YeU" secondAttribute="trailing" id="MzL-oj-IzR"/>
                                     <constraint firstItem="HWq-nU-95V" firstAttribute="top" secondItem="vkZ-H0-n5j" secondAttribute="top" id="SUk-w1-Om4"/>
+                                    <constraint firstItem="KdF-b1-Sfe" firstAttribute="top" secondItem="VJr-jD-1Ra" secondAttribute="top" id="U9k-Hp-oLp"/>
                                     <constraint firstItem="HWq-nU-95V" firstAttribute="top" secondItem="VJr-jD-1Ra" secondAttribute="top" constant="3" id="Vhu-Ql-vrJ"/>
                                     <constraint firstAttribute="bottom" secondItem="ZPm-UX-dzr" secondAttribute="bottom" id="ZAL-CV-LSu"/>
-                                    <constraint firstItem="HWq-nU-95V" firstAttribute="leading" secondItem="SWP-3a-WI8" secondAttribute="trailing" id="bDa-NN-R6H"/>
+                                    <constraint firstItem="HWq-nU-95V" firstAttribute="leading" secondItem="KdF-b1-Sfe" secondAttribute="trailing" id="aS6-Zl-ixy"/>
                                     <constraint firstItem="ZPm-UX-dzr" firstAttribute="top" secondItem="VJr-jD-1Ra" secondAttribute="top" id="caG-Ke-5Xl"/>
-                                    <constraint firstItem="YXN-8X-YeU" firstAttribute="leading" secondItem="VJr-jD-1Ra" secondAttribute="leading" id="ees-4c-aAS"/>
                                     <constraint firstItem="HWq-nU-95V" firstAttribute="centerY" secondItem="VJr-jD-1Ra" secondAttribute="centerY" id="fFp-U2-ViG"/>
-                                    <constraint firstItem="YXN-8X-YeU" firstAttribute="top" secondItem="SWP-3a-WI8" secondAttribute="top" id="fLG-Zb-fOY"/>
-                                    <constraint firstItem="SWP-3a-WI8" firstAttribute="width" secondItem="YXN-8X-YeU" secondAttribute="width" multiplier="0.75" id="gBC-g2-JBe"/>
-                                    <constraint firstItem="YXN-8X-YeU" firstAttribute="bottom" secondItem="SWP-3a-WI8" secondAttribute="bottom" id="kMq-vY-B8A"/>
-                                    <constraint firstAttribute="bottom" secondItem="SWP-3a-WI8" secondAttribute="bottom" id="o8E-Cc-v6F"/>
+                                    <constraint firstItem="KdF-b1-Sfe" firstAttribute="leading" secondItem="VJr-jD-1Ra" secondAttribute="leading" id="oaO-1J-u58"/>
                                     <constraint firstAttribute="bottom" secondItem="HWq-nU-95V" secondAttribute="bottom" constant="3" id="tt1-FG-L9K"/>
                                     <constraint firstItem="ZPm-UX-dzr" firstAttribute="leading" secondItem="HWq-nU-95V" secondAttribute="trailing" id="vTl-Mh-IDE"/>
                                     <constraint firstAttribute="trailing" secondItem="ZPm-UX-dzr" secondAttribute="trailing" id="wr0-0U-FNy"/>
@@ -2095,7 +2097,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3zl-6a-hC9">
-                                <rect key="frame" x="0.0" y="514" width="375" height="0.0"/>
+                                <rect key="frame" x="0.0" y="517" width="375" height="0.0"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" id="Oy5-uy-vFH"/>
@@ -2119,7 +2121,7 @@
                             <constraint firstItem="FeR-Yy-uA2" firstAttribute="leading" secondItem="rcJ-ZN-hfW" secondAttribute="leading" id="SvP-1F-Tp1"/>
                             <constraint firstItem="VJr-jD-1Ra" firstAttribute="top" secondItem="Mtn-eI-Dik" secondAttribute="bottom" id="XJc-Vk-BYo"/>
                             <constraint firstItem="VJr-jD-1Ra" firstAttribute="top" secondItem="FeR-Yy-uA2" secondAttribute="bottom" id="XbQ-0A-DEo"/>
-                            <constraint firstItem="Mtn-eI-Dik" firstAttribute="top" secondItem="3zl-6a-hC9" secondAttribute="bottom" constant="3" id="aCi-SP-Jhx"/>
+                            <constraint firstItem="Mtn-eI-Dik" firstAttribute="top" secondItem="3zl-6a-hC9" secondAttribute="bottom" id="aCi-SP-Jhx"/>
                             <constraint firstItem="cUx-ZN-ZG8" firstAttribute="leading" secondItem="rcJ-ZN-hfW" secondAttribute="leading" id="bIz-A5-f3M"/>
                             <constraint firstItem="OuP-2B-C0r" firstAttribute="top" secondItem="VJr-jD-1Ra" secondAttribute="bottom" id="cBN-Fo-VVC"/>
                             <constraint firstItem="OGB-1g-dv7" firstAttribute="centerY" secondItem="rcJ-ZN-hfW" secondAttribute="centerY" id="cb4-G1-Lef"/>
