--- a/Hippo/InternalClasses/Views/InformationView/InformationView.xib
+++ b/Hippo/InternalClasses/Views/InformationView/InformationView.xib
@@ -15,42 +15,58 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ei8-Za-ACZ">
-                    <rect key="frame" x="10" y="335" width="394" height="136.5"/>
+                    <rect key="frame" x="40" y="297.5" width="334" height="151.5"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="KQU-Xa-g5i">
-                            <rect key="frame" x="0.0" y="0.0" width="394" height="136.5"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="KQU-Xa-g5i">
+                            <rect key="frame" x="0.0" y="0.0" width="334" height="151.5"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noConversationImage" translatesAutoresizingMaskIntoConstraints="NO" id="gyI-5h-NaH">
-                                    <rect key="frame" x="0.0" y="0.0" width="394" height="100"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="334" height="100"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="100" id="hsz-rY-6jX"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Conversation avaliable" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UcK-DZ-soC">
-                                    <rect key="frame" x="0.0" y="115" width="394" height="21.5"/>
+                                    <rect key="frame" x="0.0" y="130" width="334" height="21.5"/>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                         </stackView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NuH-yc-rQ0">
+                            <rect key="frame" x="84" y="151.5" width="166" height="0.0"/>
+                            <constraints>
+                                <constraint firstAttribute="height" id="Tmm-Gw-sk3"/>
+                            </constraints>
+                            <connections>
+                                <action selector="button_Action" destination="iN0-l3-epB" eventType="touchUpInside" id="nnR-Id-VSh"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="KQU-Xa-g5i" firstAttribute="leading" secondItem="Ei8-Za-ACZ" secondAttribute="leading" id="G9M-rl-PdA"/>
+                        <constraint firstAttribute="trailing" secondItem="KQU-Xa-g5i" secondAttribute="trailing" id="5s1-RV-6kb"/>
+                        <constraint firstAttribute="bottom" secondItem="NuH-yc-rQ0" secondAttribute="bottom" id="7iS-5o-KjE"/>
                         <constraint firstItem="KQU-Xa-g5i" firstAttribute="top" secondItem="Ei8-Za-ACZ" secondAttribute="top" id="PYk-L4-DI8"/>
-                        <constraint firstAttribute="trailing" secondItem="KQU-Xa-g5i" secondAttribute="trailing" id="jhu-l8-CCM"/>
-                        <constraint firstAttribute="bottom" secondItem="KQU-Xa-g5i" secondAttribute="bottom" id="wQf-in-bPm"/>
+                        <constraint firstItem="NuH-yc-rQ0" firstAttribute="centerX" secondItem="Ei8-Za-ACZ" secondAttribute="centerX" id="W9o-Fr-a5c"/>
+                        <constraint firstItem="KQU-Xa-g5i" firstAttribute="leading" secondItem="Ei8-Za-ACZ" secondAttribute="leading" id="elK-gB-Ffz"/>
+                        <constraint firstItem="NuH-yc-rQ0" firstAttribute="top" secondItem="KQU-Xa-g5i" secondAttribute="bottom" id="q5X-BA-WV7"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="Ei8-Za-ACZ" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" constant="-50" id="EAh-6T-ZgB"/>
+                <constraint firstItem="Ei8-Za-ACZ" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" constant="-80" id="EAh-6T-ZgB"/>
+                <constraint firstItem="Ei8-Za-ACZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="40" id="GWd-MT-7u2"/>
+                <constraint firstItem="NuH-yc-rQ0" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.4" id="Njp-vk-Wdh"/>
                 <constraint firstItem="Ei8-Za-ACZ" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="l5a-Te-Uq4"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="button_Info" destination="NuH-yc-rQ0" id="eRG-ED-0RS"/>
+                <outlet property="constraint_BtnHeight" destination="Tmm-Gw-sk3" id="hR4-2j-RhG"/>
+                <outlet property="constraint_TopBtn" destination="q5X-BA-WV7" id="nZs-6E-lcU"/>
                 <outlet property="informationImageView" destination="gyI-5h-NaH" id="D9v-8e-jjH"/>
                 <outlet property="informationLabel" destination="UcK-DZ-soC" id="UAC-Du-SMV"/>
                 <outlet property="mainContainer" destination="Ei8-Za-ACZ" id="sjd-0I-3fg"/>
