--- a/Hippo/UIView/TableViewCell/AssignedAgentTableViewCell/AssignedAgentTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/AssignedAgentTableViewCell/AssignedAgentTableViewCell.xib
@@ -1,38 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="AssignedAgentTableViewCell" customModule="HippoChat" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="AssignedAgentTableViewCell" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Drg-kU-wPe">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                        <rect key="frame" x="5" y="5" width="310" height="39"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jY3-4z-hWf" userLabel="LeftHorizontal">
-                                <rect key="frame" x="0.0" y="21.5" width="134" height="1"/>
+                                <rect key="frame" x="0.0" y="19" width="129" height="1"/>
                                 <color key="backgroundColor" red="0.91764705879999997" green="0.91764705879999997" blue="0.91764705879999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="hgm-qt-Aiv"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8i8-tb-MaE">
-                                <rect key="frame" x="134" y="5" width="52" height="33.5"/>
+                                <rect key="frame" x="129" y="5" width="52" height="29"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C63-mc-wYg">
-                                        <rect key="frame" x="5" y="3" width="42" height="27.5"/>
+                                        <rect key="frame" x="5" y="3" width="42" height="23"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -47,7 +45,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4yO-ei-uZR" userLabel="RightHorizontal">
-                                <rect key="frame" x="186" y="21.5" width="134" height="1"/>
+                                <rect key="frame" x="181" y="19" width="129" height="1"/>
                                 <color key="backgroundColor" red="0.91764705879999997" green="0.91764705879999997" blue="0.91764705879999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="F2t-Ou-lfu"/>
@@ -67,17 +65,30 @@
                             <constraint firstItem="8i8-tb-MaE" firstAttribute="top" secondItem="Drg-kU-wPe" secondAttribute="top" constant="5" id="qrK-v0-bH6"/>
                         </constraints>
                     </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eBd-vl-Lh7">
+                        <rect key="frame" x="5" y="35" width="310" height="9"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="9" id="5zv-C1-S1j"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="eBd-vl-Lh7" firstAttribute="leading" secondItem="Drg-kU-wPe" secondAttribute="leading" id="ELc-jp-T6u"/>
                     <constraint firstAttribute="bottom" secondItem="Drg-kU-wPe" secondAttribute="bottom" id="FjP-Wg-yUV"/>
-                    <constraint firstAttribute="trailing" secondItem="Drg-kU-wPe" secondAttribute="trailing" id="IEw-6I-doS"/>
-                    <constraint firstItem="Drg-kU-wPe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="IKk-Ub-6n0"/>
-                    <constraint firstItem="Drg-kU-wPe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="aWD-Nq-4xb"/>
+                    <constraint firstAttribute="trailing" secondItem="Drg-kU-wPe" secondAttribute="trailing" constant="5" id="IEw-6I-doS"/>
+                    <constraint firstItem="Drg-kU-wPe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="IKk-Ub-6n0"/>
+                    <constraint firstItem="Drg-kU-wPe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="aWD-Nq-4xb"/>
+                    <constraint firstItem="eBd-vl-Lh7" firstAttribute="trailing" secondItem="Drg-kU-wPe" secondAttribute="trailing" id="jX9-3C-M0k"/>
+                    <constraint firstItem="eBd-vl-Lh7" firstAttribute="bottom" secondItem="Drg-kU-wPe" secondAttribute="bottom" id="nPj-2i-80G"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="messageContainer" destination="8i8-tb-MaE" id="Kf4-fl-k31"/>
                 <outlet property="messageLabel" destination="C63-mc-wYg" id="Klz-P1-YTW"/>
+                <outlet property="view_Background" destination="Drg-kU-wPe" id="TNy-Kl-g9A"/>
+                <outlet property="view_Left" destination="jY3-4z-hWf" id="hRD-QD-Mih"/>
+                <outlet property="view_Right" destination="4yO-ei-uZR" id="WFV-OV-FYO"/>
             </connections>
             <point key="canvasLocation" x="137.59999999999999" y="154.72263868065968"/>
         </tableViewCell>
